Reworks & unit tests
* AI-driven reworks after in-depth code analysis.
* Added detekt and fixed all violations.
* Added unit tests
* Updated libraries
* Improved README